bundled_metadata/force-app/main/default/objects/Contract_Settlement__c/Contract_Settlement__c.object-meta.xml
<CustomObject>
    <label>Contract Settlement</label>
    <nameField>
        <displayFormat>CS-{000000000}</displayFormat>
        <label>Contract Settle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Settlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>