bundled_metadata/force-app/main/default/objects/Contract_Settlement__c/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <label>Contract Id</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Settlements</relationshipLabel>
    <relationshipName>Contract_Settlements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>