bundled_metadata/force-app/main/default/objects/Contract_Settlement__c/fields/Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Subject_Line__c</fullName>
    <formula>Contract_Id__r.ContractNumber &amp; &quot;_&quot;  &amp; Contract_Id__r.Account.Name &amp; &quot;_Payment_&quot; &amp;  TEXT( TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Line</label>
    <type>Text</type>
</CustomField>