bundled_metadata/force-app/main/default/objects/Contract_Settlement__c/fields/Total_Invoice_Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_Number__c</fullName>
    <formula>CASE(
    Contract_Id__r.Account.Market__c,
    &quot;GB&quot;, &quot;GBP&quot;,
    &quot;RO&quot;, &quot;RON&quot;,
    &quot;PL&quot;, &quot;PLN&quot;,
    &quot;UA&quot;, &quot;UAH&quot;,
    &quot;RS&quot;, &quot;RSD&quot;,
    &quot;BA&quot;, &quot;BAM&quot;,
    &quot;EUR&quot;
)
&amp; &quot; &quot; &amp;
TEXT(Total_Invoice_Amount__c)
&amp; &quot; &quot; &amp;
CASE(
    Contract_Id__r.Account.Market__c,
    &quot;GB&quot;, &quot;£&quot;,
    &quot;RO&quot;, &quot;lei&quot;,
    &quot;PL&quot;, &quot;zł&quot;,
    &quot;UA&quot;, &quot;₴&quot;,
    &quot;RS&quot;, &quot;дин.&quot;,
    &quot;BA&quot;, &quot;KM&quot;,
    &quot;€&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Amount Number</label>
    <type>Text</type>
</CustomField>