bundled_metadata/force-app/main/default/objects/Contract_Settlement__c/fields/TTC_Number__c.field-meta.xml
<CustomField>
    <fullName>TTC_Number__c</fullName>
    <formula>Total_Invoice_Amount__c + (0.20 *  Total_Invoice_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TTC_Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>