bundled_metadata/force-app/main/default/objects/Contract_Settlement__c/fields/TVA_Number__c.field-meta.xml
<CustomField>
    <fullName>TVA_Number__c</fullName>
    <formula>0.20 *  Total_Invoice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TVA_Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>