bundled_metadata/force-app/main/default/objects/Contract_Settlement__c/fields/TVA_value__c.field-meta.xml
<CustomField>
    <fullName>TVA_value__c</fullName>
    <formula>CASE(
    TEXT(Contract_Id__r.Account.Market__c),
    &quot;GB&quot;, &quot;GBP&quot;,
    &quot;RO&quot;, &quot;RON&quot;,
    &quot;PL&quot;, &quot;PLN&quot;,
    &quot;UA&quot;, &quot;UAH&quot;,
    &quot;RS&quot;, &quot;RSN&quot;,
    &quot;BA&quot;, &quot;BAM&quot;,
    &quot;EUR&quot;
) &amp; &quot; &quot; &amp; TEXT(0.20 *  Total_Invoice_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TVA</label>
    <type>Text</type>
</CustomField>