bundled_metadata/force-app/main/default/objects/Contract_Settlement__c/validationRules/EUSFA_Prevent_Settlement_On_Max_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_Prevent_Settlement_On_Max_Invoice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
Contract_Id__r.Max_Invoices_Reached__c
)</errorConditionFormula>
    <errorMessage>Invoice limit reached based on contract duration. No additional invoices can be generated.</errorMessage>
</ValidationRule>